gigwalk-html/css/core.css
/* ... */
.instruction {
	margin-bottom: 1.5em;
}

.instruction-content .inner {
	padding: 1.2em 1em 1em 1em;
}

.instructions .item {
	padding-bottom: 1.7em;
}

.item input[type="text"],
.item input[type="textarea"] {
	margin-top: -.5em;
}

.item.time-estimate input[type="text"] {
	margin-right: .5em;
	width: 50px;
}

.time-estimate .plainLabel {
	margin-top: .4em;
}

.instructions .sub.more-info {
	margin-top: .7em; 
}

.instructions .item .actions {
	padding: 1em 0;
}

.instructions .item .actions a.buttonly,
.group a.buttonly {
	padding: .5em 1.2em .5em 1em;
}

.primary.actions .right {
	margin-right: 1em;
}

.primary.actions a {
	margin-left: .5em;
	padding: .3em 3em;
}

.primary.actions a.delete {
	padding: .3em 1.5em;
}

.icon-buttons a {
	margin-right: -5px;
	padding: .6em .8em;
}

.icon-buttons a:before {
	top: 4px;
}

.instruction-footer .item {
	padding: 0 15px;
}

.instruction-footer .item.required {
	padding-left: 0;
}

.instruction-footer .icon-checkmark {
	margin: -1px 5px -1px -1px;
	padding: 5px 0 0 6px;
	height: 42px;
	width: 42px;
}

.instruction-footer .item.count,
.instruction-footer .item.estimated {
	height: 40px;
}

.instruction-footer .required .descriptor {
	top: -5px;
}

.instruction-footer .descriptor {
	padding-left: .3em;
}

.instruction-footer .item.count .described {
	font-size: 1.4em;
		top: 2px;
}

.instruction-footer .item.estimated {
	padding-top: .6em;
}

.instruction .item.targets .dropdown {
	margin-bottom: 0;
}

.instruction .item.targets .sub.first {
	margin-top: -5px;
}

.instruction .item.targets .sub {
	padding: .3em .5em;
}

.instruction .item.targets .sub.last {
	padding-bottom: 1em;
}


/* add question */

.instruction.view-mode .type {
	margin: 1em -1em 1em 1em;
	min-width: 90%;
}

.instruction.view-mode .target {
	padding: .5em 0;
}

.instruction.view-mode .answer {
	margin-left:.5em;
}

.instruction.view-mode .answer input[type="radio"] {
	top: -3px;
}

.instruction.view-mode .answer.exception .plainLabel:after {
	font-size: 1.4em;
	line-height: 0;
	overflow: visible;
		top: 3px;
		left: -3px;
}

.instruction.view-mode .numeric input,
.instruction.view-mode .time input {
	margin: 0 0 0 0;
	padding-right: 4px;
	width: 60px;
}

.instruction.view-mode .numeric input {
	margin-right: 2em;
	padding-right: 4px;
	width: 60px;
}

.instruction.view-mode .type.date .answer {
	margin-right: 1em;
	padding-top: 0;
}

.instruction.view-mode input.datepicker {
	margin: 0 6.5em 0 0;
	padding-right: 4px;
	width: 120px;
}

.instruction.view-mode .numeric .name,
.instruction.view-mode .date .name {
	padding-top: .3em;
}

.instruction.view-mode .time .dropdown {
	margin: 0 1em 0 .5em;
}

.instruction.view-mode .time .btn.btn-default.dropdown-toggle {
	padding-top: 4px;
	padding-bottom: 4px;
		top: 5px;
}

.view-mode .instruction-content .time .dropdown-menu {
	right: -2px;
}

.view-mode .numeric .currency:before {
	content: '$';
}

.instruction.edit-mode .numeric input[type="radio"] {
	margin: 0 8px 0px 8px;
}

.instruction.edit-mode .numeric .plainLabel {
	margin-right: 1em;
}

.instruction.edit-mode .numeric .more-info input[type="checkbox"] {
	margin: .8em .8em 0 .2em;
}

.instruction.edit-mode .numeric .dropdown {
	margin: .5em 0;
}

.instruction.edit-mode .numeric .mini-panel .btn.btn-default.dropdown-toggle {
	padding-right: 30px;
}

.instruction.edit-mode .numeric .mini-panel .btn.btn-default.dropdown-toggle .caret,
.time .btn.btn-default.dropdown-toggle .caret {
	right: 5px;
}

.instruction.edit-mode .numeric input[type="text"] {
	margin: 0 0 0 0;
}

.instruction.edit-mode .numeric .mini-panel .between span {
	margin: 0 7px;
}

a.iconly {
	margin: -.5em 1.5em .5em 0;
}

.iconly input[type="checkbox"] {
	margin-right: 11px;
}

a.iconly:before {
	font-size: 1.5em;
		top: 3px;
}

.instruction.view-mode .target .answers {
	margin-left: .5em;
}

.instruction.view-mode .target .name, 
.instruction .answers .answer {
	padding: .5em 0;
}

.instruction .item.targets .sub .mini-panel {
	margin: -.3em -.5em;
	padding-right: 1em;
}

.instruction .item.targets .sub .mini-panel.targets label {
	font-size: .9em;
	margin-left: 26px;
}

.instruction .item.targets .sub .mini-panel.targets input {
	margin-right: 15px;
	margin-left: -26px;
}

.instruction.edit-mode .item .sub input[type="textarea"] {
	margin-bottom: .5em;
}

.sub.actions.duplicator {
	margin-top: -.5em;
	padding-top: 0;
}

 

/* Project builder responsive reformat */

@media (min-width: 775px) {
	
	.instruction-content .sub {
		margin-left: 150px;
	}
	
	.instruction-content .dropdown-menu {
		left: 150px;
	}
	
	.group .sub {
		margin-left: 115px; 
	}
	
	.group .dropdown-menu {
		left: 115px;
	}
	
	.group.repeats .set-repeats .dropdown-menu {
		left: 0;
	}
	
	.instructions .item .plainLabel {
		width: 135px;
	}
	
}

@media (min-width: 665px) {
	
	.instruction .header .icon-edit:after {
		display: none;
	}
	
	.instruction-content .plainLabel {
		text-align: right;
	}

	.section.title .navly:after {
		content: '/';
		padding: 0 .3em;
	}
	
	.group .plainLabel {
		text-align: right;
		margin-right: 15px;
		width: 100px;
	}
	
	.group .sub,
	.instruction .item .sub,
	.item input[type="text"],
	.item input[type="textarea"],
	.btn.btn-default.dropdown-toggle {
		width: 300px;
	}
	
	.group.materials .text-input input[type="text"] {
		width: 225px;
	}
	
	.group .dropdown-menu,
	.instructions .dropdown-menu {
		width: 301px;
	}
	
	.instructions > .ti {
		font-size: 1.1em;
		margin: .5em 0 1em 0;
	}
	
	.expander {
		font-size: 1.5em;
		margin-bottom: 1em;
	}

	.instruction .item.targets .sub .selected-item {
		width: 225px;
	}
	
	.instruction .item.targets .sub .selected-item input {
		width: 215px;
	}
	
	.iconly input[type="checkbox"]:after {
		margin-top: -5px;
	}
	
	.instruction .primary.actions {
		margin: 1em 0 1em 2em;
	}


}

@media (min-width: 931px) {

	.header .actions .ti {
			max-width: 440px;
		}
	
}

@media (min-width: 851px) and (max-width: 930px) {

	.header .actions .ti {
			max-width: 360px;
		}
	
}
/* ... */

